mobile-gap-fix

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
